registration no longer overlaps header and footer

--- a/application/prototypes/horizontalPrototype/public/css/forms.css
+++ b/application/prototypes/horizontalPrototype/public/css/forms.css
@@ -1,10 +1,14 @@
+.registration-content {
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .container3{
-    position: absolute;
-    top:50%;
-    left:50%;
+    position: relative;
     width: 400px;
     padding: 20px;
-    transform: translate(-50%, -35%);
     border: 1px solid rgb(135, 136, 136);
     border-radius: 10px;
     background-color: #daebed;
